feat: route scheduling module + code quality fixes
New features:
- Entities and services for route operational periods
  (RouteOperationalPeriod, OperationalPeriodTimeRange)
- Seasonal patterns with date ranges (SeasonalPattern)
- Schedule template versions (ScheduleTemplateVersion)
- Route calendar overrides (RouteCalendarOverride)
- Scheduling engine with strategy per SchedulingMode
  (FIXED / SEASONAL / CALENDAR_OVERRIDE)
- Time range validator (TimeRangeValidator) with 10-entry limit
- REST endpoints for all four new resources
- DurationResolverConfiguration for ISO-8601 deserialization

Admin module:
- UserRepository / CompanyRepository: native admin queries
  (findAllAdmin, findByIdAdmin, reactivateById) bypassing
  @SQLRestriction
- AdminUserService / AdminCompanyService: reactivate(), optional
  password update, admin queries
- AdminUserController / AdminCompanyController: PATCH /{id}/reactivate
- UpdateAdminUserRequest: optional newPassword field
- CreateAdminUserRequest: @NullMarked for nullability resolution

Code quality (SonarQube):
- S2589: removed redundant null-check in JwtAuthenticationFilter
  using Optional.ofNullable
- S5778: multi-throw lambdas extracted to local variables
  in TimeRangeValidatorTest
- S4449: @Nullable on User constructor param, Objects.requireNonNull()
  in AdminUserService to bridge JSpecify↔Spring nullability
- S4144: removed unused imports across production and test files
- pom.xml: default argLine for Surefire without coverage profile;
  Sonar coverage exclusions for new JPA repository interfaces